Fix rules spacing

--- a/src/components/form/Form.module.css
+++ b/src/components/form/Form.module.css
@@ -46,4 +46,10 @@
   .charlength {
     gap: var(--space-base);
   }
+  .rules {
+    gap: var(--space-md);
+  }
+  .rule {
+    gap: var(--space-lg);
+  }
 }
